# Calculating-library

./: .coveragerc  README.md  calc.py  library.py  pyproject.toml  test.py
.github/workflows/: greetings.yml
src/calclib/: __init__.py  calclib.py
src/calclibr/: __init__.py
tests/: test_logic.py
