[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calclibr"
version = "1.0.1"
authors = [
  { name="Zhenya" },
]
description = "This library adds some functions for arithmetic operations"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=calculating --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
"Homepage" = "https://github.com/zhenya194/Calculating-library"
